fixed mobile view. no more extra space.

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,8 +131,8 @@ img.aside-img {
 
 #hawaii-text {
   position: relative;
-  bottom: 650px;
-  left: 575px;
+  bottom: 610px;
+  left: 110px;
   color: white;
 }
 
